# polybotv1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  orchestration.py  web.py
app/alerts/: console_alerts.py  telegram_alerts.py
app/clients/: clob_client.py  crypto_price_client.py  gamma_client.py  websocket_client.py
app/models/: core.py  runtime.py
app/scanners/: __init__.py  late_resolution_scanner.py  liquidity_filter.py  multi_outcome_scanner.py  near_close_market_filter.py  related_market_scanner.py  stale_price_scanner.py  sum_arb_scanner.py
app/services/: onchain.py  preflight.py  redeemer.py  wallet_status.py
app/static/: dashboard.css  dashboard.js
app/storage/: backups.py  db.py  path_safety.py  repositories.py
app/strategy/: __init__.py  execution_planner.py  near_close_order_manager.py  near_close_stop_exit.py  opportunity_ranker.py  polymarket_live_trading.py  risk_manager.py
app/templates/: dashboard.html
app/utils/: execution_utils.py  logging_utils.py  math_utils.py  time_utils.py
rules/: related_markets.example.yaml
scripts/: cleanup-near-close-orders.ps1  launch-dashboard.ps1  watch-supervisor.ps1  wrap-usdce-to-pusd.py
tests/: test_db.py  test_live_trading.py  test_live_trading_legacy.py  test_math_and_filters.py  test_near_close_order_manager.py  test_onchain.py  test_orchestration_shortlist.py  test_preflight.py  test_risk_manager.py  test_scanners.py  test_strategy_and_storage.py  test_time_utils.py  test_wallet_status.py  test_web_dashboard.py
