[project]
name = "polymarket-mispricing-scanner"
version = "0.1.0"
description = "Production-style Polymarket mispricing scanner bot with scanner-first execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<0.29",
    "Jinja2>=3.1,<4.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "py-clob-client-v2==1.0.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.7,<14.0",
    "uvicorn>=0.30,<1.0",
    "websockets>=13.1,<16.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.2,<3.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
